--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -4,6 +4,8 @@ backend:
   name: github
   repo: Kjelldg/netlifytest
 
+  site_url: "https://www.framtidensklimat.se"
+
 media_folder: static/img
 public_folder: /img
 
